plugins/simtech/mm-broadband-modem-qmi-simtech.c
@@ -52,6 +52,7 @@ mm_broadband_modem_qmi_simtech_new (const gchar  *device,
                          MM_BASE_MODEM_PLUGIN,     plugin,
                          MM_BASE_MODEM_VENDOR_ID,  vendor_id,
                          MM_BASE_MODEM_PRODUCT_ID, product_id,
+                         MM_BROADBAND_MODEM_INDICATORS_DISABLED, TRUE,
                          NULL);
 }
 
